Correct region handling for spotify and correct song/album save
